--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
- "devDependencies": {
-  "vite": "^5.0.0",
-  "@vitejs/plugin-react": "^4.2.0"
-}
-
+  "dependencies": {
+    "ethers": "^6.10.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.0.0"
   }
 }
+
 
